--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="/javascript.js"></script>
+    <link rel="stylesheet" type="text/css" href="design.css"></link>
   </head>
   <body>
     <div id="main">
       <form name="f">
-        <input type="text" name="ddd" />
+        <input type="text" name="ddd" placeholder="0" id="screen" />
         <br />
-        <input type="button" name="" value="1" onclick="f.ddd.value += 1" />
+        <input type="button" name="" value="1" onclick="f.ddd.value += 1" id />
         <input type="button" name="" value="2" onclick="f.ddd.value += 2" />
         <input type="button" name="" value="3" onclick="f.ddd.value += 3" />
-        <input type="button" name="" value="+" onclick="f.ddd.value += '+'" />
+        <input type="button" name="" value="+" onclick="add()" />
         <br />
         <input type="button" name="" value="4" onclick="f.ddd.value += 4" />
         <input type="button" name="" value="5" onclick="f.ddd.value += 5" />
         <input type="button" name="" value="6" onclick="f.ddd.value += 6" />
-        <input type="button" name="" value="-" onclick="f.ddd.value += '-'" />
+        <input type="button" name="" value="-" onclick="minus()" />
         <br />
         <input type="button" name="" value="7" onclick="f.ddd.value += 7" />
         <input type="button" name="" value="8" onclick="f.ddd.value += 8" />
         <input type="button" name="" value="9" onclick="f.ddd.value += 9" />
-        <input type="button" name="" value="/" onclick="f.ddd.value += '/'" />
+        <input type="button" name="" value="/" onclick="divide()" />
         <br />
         <input type="button" name="" value="C" onclick="f.ddd.value = ''" />
         <input type="button" name="" value="0" onclick="f.ddd.value += 0" />
@@ -34,7 +36,7 @@
           value="="
           onclick="f.ddd.value = eval(f.ddd.value)"
         />
-        <input type="button" name="" value="X" onclick="f.ddd.value += '*'" />
+        <input type="button" name="" value="X" onclick="multiply()" />
         <br />
       </form>
     </div>
